Fix instanceof for DOM objects (patch in unrelated bug 162927), r=caillon, sr=jst.